--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                     <legend>Book data</legend>
 
                         <label for="title">Title:</label>
-                        <input type="text" name="title" id="title">
+                        <input type="text" name="title" id="title" minLength="5" maxlength="50" required>
 
                         <label for="author">Author:</label>
-                        <input type="text" name="author" id="author">
+                        <input type="text" name="author" id="author" minlength="5" maxlength="50" required>
 
                         <label for="pages">Pages</label>
-                        <input type="number" name="pages" id="pages">
+                        <input type="number" name="pages" id="pages" min="10" max="1000" required>
 
                     <div>
                         <label for="read">Have you read it?</label>
